fixup: slowly migrating to a good state
Signed-off-by: Simon Schrottner <simon.schrottner@dynatrace.com>